attempt to fix overflow problem

--- a/src/common/common.css
+++ b/src/common/common.css
@@ -1,6 +1,7 @@
 
 .gamelet {
     height: 100%;
+    overflow: hidden;
 }
 
 .unselectable { 
